3 ======================================================================
+ убраны методы GradGen.get_current_value() и переработан алгоритм
  генерации новых значений
+ добавлен режим GradPosition.RANDOM
+ добавлен класс SequenceGenGradGen

1 ======================================================================
! первый блин