@@ -10,7 +10,7 @@ distribdir = ~/downloads
 #
 basename = dmxgrad
 srcversion = dmxgrad
-version = $(shell python3 -c 'from $(srcversion) import REVISION; print(REVISION)')
+version = "r$(shell python3 -c 'from $(srcversion) import REVISION; print(REVISION)')"
 branch = $(shell git symbolic-ref --short HEAD)
 title = $(basename)
 title_version = "$(title) r$(version)"
@@ -74,3 +74,6 @@ docview:
 
 todo:
 	pytodo.py $(pysrcs) >$(todo)
+
+help:
+	python3 -c "import $(srcversion); help($(srcversion))"
