@@ -17,6 +17,14 @@
 Небольшой набор костылей для генерации цветовых градиентов, которые
 затем могут быть скормлены DMX512-совместимому устройству.
 
+**Внимание!**
+
+  1. Это поделие создано для баловства, и категорически НЕ предназначено
+     для управления взаправдашним сценическим оборудованием на взаправдашней
+     сцене.
+  2. Потроха поделия могут быть в любой момент изменены до полной
+     неузнаваемости и несовместимости с предыдущей версии.
+
 ## ЧЕГО ХОЧЕТ
 
   - Python 3.6 или новее
