@@ -1,8 +1,15 @@
-3 ======================================================================
+r4 =====================================================================
+* изменен класс LineGradGen: удалёно поле fadeout, вместо него начальное
+  и конечное значения задаются явно полями channelsFrom/channelsTo,
+  содержащими кортежи для начальных и конечных значений многоканального
+  градиента
++ добавлено правило "help" в Makefile
+
+r3 =====================================================================
 + убраны методы GradGen.get_current_value() и переработан алгоритм
   генерации новых значений
 + добавлен режим GradPosition.RANDOM
 + добавлен класс SequenceGenGradGen
 
-1 ======================================================================
+r1 =====================================================================
 ! первый блин
